fix z-index in footer and posts

--- a/app/assets/css/footer.css
+++ b/app/assets/css/footer.css
@@ -7,6 +7,7 @@
     justify-content: center;
     color: var(--white);
     font-size: 14px;
+    z-index: 10;
 }
 
 .footer a {
