--- a/app/assets/css/posts.css
+++ b/app/assets/css/posts.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 50;
 }
 .post-image {
     width: var(--width-card);
